[tool.poetry]
name = "mockango"
version = "1.0.1"
description = "django-admin fixture generator command"
authors = ["iliark1382 <iliark82@gmail.com>"]
license = "BSD 3-Clause"
readme = 'README.md'
homepage = "https://github.com/iliark1382/mockango"
repository = "https://github.com/iliark1382/mockango"
keywords = [
    "fixture",
    "mock",
    "data",
    "django-fixture",
    "django-admin",
    "django",
    "mimesis",
    "mockango",
] 

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
Django = "^3.1"
mimesis = "^4.1.3"
colorama = "^0.4.4"
PyYAML = "^5.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
