[metadata]
name = mockango
version = 0.1
description = Django cli tool for generating data
long_description = file: README.md
author = iliark1382
author_email = iliark82@gmail.com
licence = BSD-3-Clause

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2
    mimesis >= 4.1.3
    PyYAML >= 5.4.1
    colorama >= 0.4.4